Add Test End to End

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -49,6 +49,10 @@ spring:
           uri: http://mslogistica:8085
           predicates:
             - Path=/criarEntregador/**
+        - id: logistica-encerrarEntrega
+          uri: http://mslogistica:8085
+          predicates:
+            - Path=/encerrarEntrega
 
 logging:
   level:
